Some miscellanious enhancements

--- a/front-end-resources/pages/Map/map.html
+++ b/front-end-resources/pages/Map/map.html
@@ -22,7 +22,6 @@
 
 <div data-include="../../shared-resources/navbar-top.html"></div>
 
-
 <div class="container-fluid">
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
@@ -47,7 +46,7 @@
                 <div class="header">Map</div>
                 <container>
                     <canvas id="map" width="512" height="448" style="position: absolute;">Canvas not supported on your browser</canvas>
-                    <img src="./Images/OakVillageTop.png" width="512" height="448" style="position: relative;">
+                    <img id= "mapOverlay" src="./Images/OakVillageTop.png" width="512" height="448" style="position: relative;">
                 </container>
             </div>
         </div>
