Fixed links from non-homepage

--- a/front-end-resources/shared-resources/navbar-top.html
+++ b/front-end-resources/shared-resources/navbar-top.html
@@ -21,14 +21,14 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i> Explore</a>
                 <ul class="dropdown-menu">
-                    <li><a class="top-menu" href="./front-end-resources/pages/Map/map.html">Last Map</a></li>
+                    <li><a class="top-menu" href="../Gyms/gyms.html">Last Map</a></li>
                     <li><a class="top-menu" href="#">World Map</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a class="top-menu" href="./front-end-resources/pages/Gyms/gyms.html">Gym Leaders</a></li>
+                    <li><a class="top-menu" href="../Gyms/gyms.html">Gym Leaders</a></li>
                     <li><a class="top-menu" href="#">PvP Arena</a></li>
                     <li><a class="top-menu" href="#">Raids Lobby</a></li>
                 </ul>
