--- a/front-end-resources/shared-resources/navbar-bot.html
+++ b/front-end-resources/shared-resources/navbar-bot.html
@@ -13,14 +13,14 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i> Explore</a>
                 <ul class="dropdown-menu">
-                    <li><a href="./front-end-resources/pages/Map/map.html">Last Map</a></li>
+                    <li><a href="../Map/map.html">Last Map</a></li>
                     <li><a href="#">World Map</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a href="./front-end-resources/pages/Gyms/gyms.html">Gym Leaders</a></li>
+                    <li><a href="../Gyms/gyms.html">Gym Leaders</a></li>
                     <li><a href="#">PvP Arena</a></li>
                     <li><a href="#">Raids Lobby</a></li>
                 </ul>
