--- a/front-end-resources/pages/Homepage/index.html
+++ b/front-end-resources/pages/Homepage/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="front-end-resources/shared-resources/csi.min.js"></script>
+    <script src="../../shared-resources/csi.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=PT Sans' rel='stylesheet'>
@@ -19,26 +19,26 @@
 
 <body>
 
-<div data-include="front-end-resources/shared-resources/navbar-top.html"></div>
+<div data-include="../../shared-resources/navbar-top.html"></div>
 
 <div class="container-fluid">
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
-    <img class="revenue" src="front-end-resources/shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; max-width: 150px;">
+    <img class="revenue" src="../../shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; max-width: 150px;">
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
 
-<a href="./index.html" id="logo-link"><img src="./front-end-resources/shared-resources/logo.png" class= "img-responsive" id="logo"></a>
+<a href="./index.html" id="logo-link"><img src="../../shared-resources/logo.png" class= "img-responsive" id="logo"></a>
 
-<div data-include="front-end-resources/shared-resources/navbar-bot.html"></div>
+<div data-include="../../shared-resources/navbar-bot.html"></div>
 
 <div class="white-back">
     <div class="container-fluid">
         <div class="col-xs-0 col-sm-3 col-md-3 col-lg-3">
             <div class="white-box">
                 <div class="header">Party</div>
-                <div data-include="front-end-resources/shared-resources/party.html"></div>
+                <div data-include="../../shared-resources/party.html"></div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
@@ -75,7 +75,7 @@
 </div>
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
-    <img class="revenue" src="front-end-resources/shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; float: right; max-width: 150px;">
+    <img class="revenue" src="../../shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; float: right; max-width: 150px;">
 </div>
 
 </div>
