--- a/front-end-resources/pages/Map/map.html
+++ b/front-end-resources/pages/Map/map.html
@@ -46,6 +46,11 @@
                 <container>
                     <canvas id="map" width="512" height="448" style="position: absolute;">Canvas not supported on your browser</canvas>
                     <img id= "mapOverlay" src="./Images/OakVillageTop.png" width="512" height="448" style="position: relative;">
+                    <a href="#"><div id="wild-bubble">
+                        <img src="../../shared-resources/Snorlax.png">
+                        <p>A wild Snorlax (41)</p>
+                        <p>appeared!</p>
+                    </div></a>
                 </container>
             </div>
         </div>
