made character into class. start of refactoring

--- a/front-end-resources/pages/Map/map.html
+++ b/front-end-resources/pages/Map/map.html
@@ -61,6 +61,6 @@
     
 </body>
 
-<script src="./Gameplay/map-generator.js"></script>
+<script src="./scripts/map-generator.js"></script>
 
 </html>
